fix for program on mobile

--- a/app/assets/stylesheets/_program.css.scss
+++ b/app/assets/stylesheets/_program.css.scss
@@ -40,7 +40,7 @@
       top: 0 !important;
       left: 0 !important;
       margin-top: 0 !important;
-      margin-bottom: 0 !important:
+      margin-bottom: 0 !important;
     }
     .day{
       margin-top: 3rem;
